--- a/templates/tool.html
+++ b/templates/tool.html
@@ -30,7 +30,8 @@
         var xhr = new XMLHttpRequest();
         var formData = new FormData();
         xhr.open('POST', '/detectv5', true);
-        xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+        // xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+        xhr.setRequestHeader('Content-Type', 'application/json');
 
         var body = JSON.stringify({
                         image: dataURI
