added json response

--- a/templates/tool.html
+++ b/templates/tool.html
@@ -52,7 +52,7 @@
         };
 
 // Send the request with the JSON data in the request body
-        console.log(JSON.stringify(body));
+        // console.log(JSON.stringify(body));     
         xhr.send(body);
 
         // formData.append("image",encodeURIComponent(dataURI))
